--- a/Breast_Cancer.ipynb
+++ b/Breast_Cancer.ipynb
@@ -898,11 +898,96 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "080abcc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ManikantaAleti\\AppData\\Local\\Temp\\ipykernel_17424\\3060722521.py:28: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X[column] = label_encoder.fit_transform(X[column])\n",
+      "C:\\Users\\ManikantaAleti\\AppData\\Local\\Temp\\ipykernel_17424\\3060722521.py:28: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X[column] = label_encoder.fit_transform(X[column])\n",
+      "C:\\Users\\ManikantaAleti\\AppData\\Local\\Temp\\ipykernel_17424\\3060722521.py:28: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X[column] = label_encoder.fit_transform(X[column])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.8509316770186336\n"
+     ]
+    }
+   ],
+   "source": [
+    "#import libraries\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy import stats\n",
+    "from scipy.stats import bootstrap\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "# Assuming you have a DataFrame df with categorical columns and a target column\n",
+    "# Replace df and target_column with your actual data\n",
+    "df = pd.read_csv('Data/Breast_Cancer.csv')\n",
+    "\n",
+    "# Extract features and target variable\n",
+    "#X = df.drop('Marital Status', axis=1)\n",
+    "X = df[['Race', 'Grade', 'Marital Status']]\n",
+    "y = df['Status']\n",
+    "\n",
+    "# Perform Label Encoding for categorical columns\n",
+    "label_encoder = LabelEncoder()\n",
+    "\n",
+    "for column in X.select_dtypes(include='object').columns:\n",
+    "    X[column] = label_encoder.fit_transform(X[column])\n",
+    "\n",
+    "# Split the dataset into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Create a Random Forest classifier\n",
+    "random_forest_classifier = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "\n",
+    "# Train the classifier on the training data\n",
+    "random_forest_classifier.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions on the test set\n",
+    "y_pred = random_forest_classifier.predict(X_test)\n",
+    "\n",
+    "# Evaluate the performance of the model\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f'Accuracy: {accuracy}')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "765e53bb",
    "metadata": {},
    "source": [
-    "# Conclusion: Any model we use we are getting accuracy more than 80% and the data is fitting properly"
+    "# Conclusion: Any model we use are getting accuracy more than 80% with or without using encoding technique and the data is fitting properly"
    ]
   }
  ],
